# breakout-massive-iot

./: .codecov.yml  .travis.yml  CMakeLists.txt  README.md  ci-script-travis.sh  ci-testscript.sh
external_libs/tinydtls/: dtls_debug.h  dtls_time.c
native/: README.md
native/hiltests/: CMakeLists.txt  InformationRN4Test.cpp  NetworkRN4Test.cpp  README.md  SIMRN4Test.cpp  SocketRN4Test.cpp  UnitMain.cpp
native/platform/: CharDeviceSerial.h  log.c  log.cpp  power.c  power.cpp  time.c  time.cpp
native/sample/: CMakeLists.txt  bg96-mqtt-sample.cpp  dummy-data-source.h  mqtt-sample.cpp  paho-mqtt-client.h  rn4-paho-mqtt-sample.cpp
src/Breakout/: Breakout.cpp  Breakout.h
src/CoAP/: CoAPMessage.cpp  CoAPMessage.h  CoAPOption.h  CoAPPeer.cpp
src/DTLS/: OwlDTLSClient.cpp  OwlDTLSClient.h
src/modem/: IOwlSerial.h  OwlGNSS.cpp  OwlGNSS.h  OwlModemAT.cpp  OwlModemAT.h  OwlModemBG96.cpp  OwlModemBG96.h  OwlModemCall.cpp  OwlModemCall.h  OwlModemGNSS.cpp  OwlModemGNSS.h  OwlModemInformation.cpp  OwlModemInformation.h  OwlModemMQTTBG96.cpp  OwlModemMQTTRN4.cpp  OwlModemMQTTRN4.h  OwlModemNetwork.cpp  OwlModemNetwork.h  OwlModemNetworkRN4.cpp  OwlModemNetworkRN4.h  OwlModemPDN.cpp  OwlModemRN4.cpp  OwlModemRN4.h  OwlModemSIM.cpp  OwlModemSIM.h  OwlModemSSLBG96.cpp  OwlModemSSLRN4.cpp  OwlModemSSLRN4.h  OwlModemSocket.cpp  OwlModemSocket.h  OwlModemSocketRN4.cpp  OwlModemSocketRN4.h  OwlNMEA0183.cpp  OwlNMEA0183.h  README.md  enums.cpp  enums.h  enumsRN4.cpp  enumsRN4.h
src/platform/: log.h  mem.h  platform.h  power.h  random.h  time.h
src/shims/paho-mqtt/: RN4PahoIPStack.cpp  RN4PahoIPStack.h
src/utils/: base64.c  base64.cpp  base64.h  log.h  md5.c  md5.cpp  md5.h  str.c  str.cpp  str.h  utils.h
tests/: CMakeLists.txt  test_nmea.cpp  test_owlmodemat.cpp  test_platform.cpp  test_platform.h
tests/scripts/: modems.csv  test_runner.py
